# lib/api/view_token.py
@@ -1,6 +1,10 @@
 from lib.api.auth import encode_token
 from http import HTTPStatus
+from lib.config import CONFIG
 
 
-def get(username):
-    return encode_token(username), HTTPStatus.OK
+def get(body):
+    if body['username'] == CONFIG.USERNAME and body['password'] == CONFIG.STRONG_PASSWORD:
+        return encode_token(body['username']), HTTPStatus.OK
+    else:
+        return {}, HTTPStatus.FORBIDDEN
